fix inappropriate word breaks in sidebar in Firefox

--- a/templates/global.css
+++ b/templates/global.css
@@ -218,14 +218,7 @@ h4, .h4{
     height:100%;
 }
 #sidebar{
-    padding-top:0px;
-    -ms-word-break:break-all;
-    word-break:break-all;
-    word-break:break-word;
-    -webkit-hyphens:auto;
-    -moz-hyphens:auto;
-    -ms-hyphens:auto;
-    hyphens:auto;
+    padding-top:0;
 }
 #sidebar a{
     color:#add8e6;
